Merge pull request #24 in EVOTING/crypto-primitives from feature/same-group-matrix-VE-3945 to develop
Squashed commit of the following:

commit 3172975bc462624c7599ba4a388e6b1acebbe977
Author: Renold Hadrien <hadrien.renold@post.ch>
Date:   Mon Jan 18 09:51:47 2021 +0100

    PR feedback

commit 98a1c13efa291d4aa105c0c5360230665c961154
Author: Renold Hadrien <hadrien.renold@post.ch>
Date:   Thu Jan 14 17:47:44 2021 +0100

    PR feedback

commit f0aedbd210a0a82f94d209905b86d59fe289ec6a
Author: Renold Hadrien <hadrien.renold@post.ch>
Date:   Thu Jan 14 14:36:12 2021 +0100

    Added missing licenses and optimize imports

commit 420823f4f5a76cb52e56a01287ea971605f4b542
Author: Renold Hadrien <hadrien.renold@post.ch>
Date:   Thu Jan 14 14:31:28 2021 +0100

    Fix merge issues

commit bd1770bcf1b8f550a469552aeb9f2e95116a2c15
Merge: 8b087b7 b44c3d7
Author: Renold Hadrien <hadrien.renold@post.ch>
Date:   Thu Jan 14 14:27:45 2021 +0100

    Merge branch 'crypto-primitives/develop' into feature/same-group-matrix-VE-3945

commit 8b087b7935edfbad5c8c0b7688573c14fabbbfc1
Author: Renold Hadrien <hadrien.renold@post.ch>
Date:   Thu Jan 14 14:24:38 2021 +0100

    Fix failing tests

commit 71606ade7305d1b0ca37e011e2cb81c2de465f3c
Author: Renold Hadrien <hadrien.renold@post.ch>
Date:   Thu Jan 14 14:07:15 2021 +0100

    Remove executable permission

commit 742a42c4e5e971979d256205b72237dc585e73a5
Author: Renold Hadrien <hadrien.renold@post.ch>
Date:   Thu Jan 14 12:09:44 2021 +0100

    Use SameGroupVector in starmap

commit c86da2f0398e2bfd8425fdb5c248af52a300fd21
Author: Renold Hadrien <hadrien.renold@post.ch>
Date:   Thu Jan 14 11:43:53 2021 +0100

    Cleanup test generators

commit 8bb6f01c92d4b3a44ccc650048c944a6aaa59256
Author: Renold Hadrien <hadrien.renold@post.ch>
Date:   Thu Jan 14 11:36:17 2021 +0100

    Add test for classes not extending SameGroupVector anymore

commit 7ce52aa867d896a77d17b76f1083347e5dc58f4f
Author: Renold Hadrien <hadrien.renold@post.ch>
Date:   